// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQAD3kVuqciESWl5y-hCAMVswvw_Q2UL2Qg2l7J8rf-d-NOf"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQC1EdL_9mGHrny-5UeyfkDplndOLxWwy8DKAe9Nrg9NdGYE"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAD3kVuqciESWl5y-hCAMVswvw_Q2UL2Qg2l7J8rf-d-NOf",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15651n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAD3kVuqciESWl5y-hCAMVswvw_Q2UL2Qg2l7J8rf-d-NOf",
            "to": "kQC1EdL_9mGHrny-5UeyfkDplndOLxWwy8DKAe9Nrg9NdGYE",
            "type": "internal",
            "value": 9971372000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAD3kVuqciESWl5y-hCAMVswvw_Q2UL2Qg2l7J8rf-d-NOf",
          "to": "kQC1EdL_9mGHrny-5UeyfkDplndOLxWwy8DKAe9Nrg9NdGYE",
          "type": "internal",
          "value": 9971372000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14172n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQC1EdL_9mGHrny-5UeyfkDplndOLxWwy8DKAe9Nrg9NdGYE",
            "to": "kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir",
            "type": "internal",
            "value": 9947898000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQC1EdL_9mGHrny-5UeyfkDplndOLxWwy8DKAe9Nrg9NdGYE",
          "to": "kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir",
          "type": "internal",
          "value": 9947898000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14100n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir",
            "to": "kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir",
            "type": "internal",
            "value": 9924684000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir",
          "to": "kQD1vJGcPknbnB-rkifZULg0UPHFk0Z6YUcmsokzPRYYCNir",
          "type": "internal",
          "value": 9924684000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4380n,
      },
    ],
  },
]
`;
